Use "language-oriented" instead of "language-driven" in file headers.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# purple-dragon : Experiment with language-driven programming.
+# purple-dragon : Experiment with language-oriented programming.
 #
 # Copyright (C) 2023, Jeffrey J. Weston <jjweston@gmail.com>
 #
