--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <!--
 
-purple-dragon : Experiment with language-driven programming.
+purple-dragon : Experiment with language-oriented programming.
 
 Copyright (C) 2023, Jeffrey J. Weston <jjweston@gmail.com>
 
